# IISC-CAPSTONE-PROJECT

./: Alphavantage-api-trials.ipynb  Capstone.ipynb  Insurance_Product_EDA.ipynb  README.md  alphavantage-api-trials  alphavantage-api-trials.ipynb  app.py  implementation-plan.md  lphavantage-api-trials.ipynb  lphavantage-api-trials.ipynb.ipynb  prep-work.md  pyproject.toml  references  references.md  requirements.txt
.streamlit/: config.toml
data/: mock_users.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPENDENCIES_SUMMARY.md  SETUP.md
docs/diagrams/: component-architecture.puml  data-flow.puml  deployment-architecture.puml  system-architecture.puml  user-journey.puml
utils/: financial_advisor.py  goal_planner.py  market_data.py  portfolio_analyzer.py  recommendation_engine.py  user_profile.py
