[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.59.0",
    "numpy>=2.3.2",
    "openai>=1.96.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.47.1",
    "yfinance>=0.2.65",
]
